--- a/contdfunc.html
+++ b/contdfunc.html
@@ -271,7 +271,8 @@ function typeOf(x){
     return myFindings;
 }
 console.log(typeOf(1));
-console.log(typeOf("a"));
+console.locls
+g(typeOf("a"));
 console.log(typeOf("The man ran away"));
 /*
 15. Write a function that takes a number as an argument and returns the square root of that number.
@@ -291,4 +292,3 @@ console.log(squareRoot(25));
 </script>
 </body>
 </html>
-    
